# AOC24

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets2.json
include/: day01.hpp  day02.hpp  day03.hpp  day04.hpp  day05.hpp  day06.hpp  day07.hpp  day08.hpp  day09.hpp  day1.hpp  day10.hpp  day11.hpp  day12.hpp  day13.hpp  day14.hpp  day15.hpp  day16.hpp  day17.hpp  day18.hpp  day19.hpp  day2.hpp  day20.hpp  day21.hpp  day22.hpp  day23.hpp  day24.hpp  day25.hpp  day6.hpp  day7.hpp  day8.hpp  day9.hpp  example.txt  utils.hpp  utils_dirs.hpp
res/day2/: input.txt  test.txt  test2.txt
src/: main.cpp
